Added Container entity

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -160,6 +160,12 @@
     <script src="scripts/components/auth/provider/auth.session.service.js"></script>
     <script src="scripts/app/account/sessions/sessions.js"></script>
     <script src="scripts/app/account/sessions/sessions.controller.js"></script>
+    <script src="scripts/app/entities/contenedor/contenedor.js"></script>
+    <script src="scripts/app/entities/contenedor/contenedor.controller.js"></script>
+    <script src="scripts/app/entities/contenedor/contenedor-dialog.controller.js"></script>
+    <script src="scripts/app/entities/contenedor/contenedor-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/contenedor/contenedor-detail.controller.js"></script>
+    <script src="scripts/components/entities/contenedor/contenedor.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
